fix mobile spacing

--- a/apps/web/src/components/Schedule/Schedule.module.scss
+++ b/apps/web/src/components/Schedule/Schedule.module.scss
@@ -204,14 +204,6 @@
     padding: 16px;
   }
 
-  .scheduleSectionWrapper {
-    background-color: #fffefe;
-  }
-
-  .scheduleSectionWrapper:before {
-    background: transparent;
-  }
-
   .scheduleHeader {
     justify-content: center;
   }
